@@ -34,6 +34,7 @@ import java.io.StringReader;
 import java.net.URL;
 import java.text.NumberFormat;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
@@ -131,36 +132,39 @@ public class SolrInfoMBeanHandler extends RequestHandlerBase {
     
     Map<String, SolrInfoMBean> reg = req.getCore().getInfoRegistry();
     for (Map.Entry<String, SolrInfoMBean> entry : reg.entrySet()) {
-      String key = entry.getKey();
-      SolrInfoMBean m = entry.getValue();
+      addMBean(req, cats, requestedKeys, entry.getKey(),entry.getValue());
+    }
 
-      if ( ! ( requestedKeys.isEmpty() || requestedKeys.contains(key) ) ) continue;
-
-      NamedList<NamedList<Object>> catInfo = cats.get(m.getCategory().name());
-      if ( null == catInfo ) continue;
-
-      NamedList<Object> mBeanInfo = new SimpleOrderedMap<>();
-      mBeanInfo.add("class", m.getName());
-      mBeanInfo.add("version", m.getVersion());
-      mBeanInfo.add("description", m.getDescription());
-      mBeanInfo.add("src", m.getSource());
-      
-      // Use an external form
-      URL[] urls = m.getDocs();
-      if(urls!=null) {
-        List<String> docs = new ArrayList<>(urls.length);
-        for(URL url : urls) {
-          docs.add(url.toExternalForm());
-        }
-        mBeanInfo.add("docs", docs);
-      }
-      
-      if (req.getParams().getFieldBool(key, "stats", false))
-        mBeanInfo.add("stats", m.getStatistics());
-      
-      catInfo.add(key, mBeanInfo);
+    for (SolrInfoMBean infoMBean : req.getCore().getCoreDescriptor().getCoreContainer().getResourceLoader().getInfoMBeans()) {
+      addMBean(req,cats,requestedKeys,infoMBean.getName(),infoMBean);
     }
     return cats;
+  }
+
+  private void addMBean(SolrQueryRequest req, NamedList<NamedList<NamedList<Object>>> cats, Set<String> requestedKeys, String key, SolrInfoMBean m) {
+    if ( ! ( requestedKeys.isEmpty() || requestedKeys.contains(key) ) ) return;
+    NamedList<NamedList<Object>> catInfo = cats.get(m.getCategory().name());
+    if ( null == catInfo ) return;
+    NamedList<Object> mBeanInfo = new SimpleOrderedMap<>();
+    mBeanInfo.add("class", m.getName());
+    mBeanInfo.add("version", m.getVersion());
+    mBeanInfo.add("description", m.getDescription());
+    mBeanInfo.add("src", m.getSource());
+
+    // Use an external form
+    URL[] urls = m.getDocs();
+    if(urls!=null) {
+      List<String> docs = new ArrayList<>(urls.length);
+      for(URL url : urls) {
+        docs.add(url.toExternalForm());
+      }
+      mBeanInfo.add("docs", docs);
+    }
+
+    if (req.getParams().getFieldBool(key, "stats", false))
+      mBeanInfo.add("stats", m.getStatistics());
+
+    catInfo.add(key, mBeanInfo);
   }
 
   protected NamedList<NamedList<NamedList<Object>>> getDiff(
